templates/service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ${APP_NAME}-gateway
  namespace: ${APP_NAME}
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - ${DOMAIN}
    tls:
      mode: SIMPLE
      credentialName: ${FLAT_DOMAIN}-tls-secret

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ${APP_NAME}-vs
  namespace: ${APP_NAME}
spec:
  hosts:
  - ${DOMAIN}
  gateways:
  - ${APP_NAME}-gateway
  http:
  - route:
    - destination:
        host: ${APP_NAME}-server
        port:
          number: 80
    headers:
      request:
        set:
          X-Forwarded-Proto: https
